--- a/src/todo-e-nc-console/todo-e-nc-web/Views/Shared/_Layout.cshtml
+++ b/src/todo-e-nc-console/todo-e-nc-web/Views/Shared/_Layout.cshtml
@@ -5,30 +5,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - todo_e_nc_web</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/site_dark.css" />
+    <style>
+        html, body {
+            height: 100%
+        }
+
+        .workspaces {
+            float: left;
+            background-color: #111;
+            width: 10%;
+            min-width: 150px;
+            max-width: 350px;
+            height: 100%;
+            min-height: 100%;
+        }
+
+        .workspace-item {
+            box-sizing: border-box;
+            width: 100%;
+            vertical-align: middle;
+            margin: 25px 0px;
+        }
+
+        .workspace-item-img {
+            max-width: 50px;
+            width: 50px;
+            height: 50px;
+            margin: 10px;
+            vertical-align: middle;
+            border-style: none;
+        }
+
+        .workspace-item-name {
+            padding-left: 10px;
+            margin-bottom: 20px;
+            vertical-align: middle;
+        }
+
+        hr {
+            background-color: #333;
+            width: 100%;
+            height: 1px;
+            border: none;
+            margin: 0px;
+        }
+    </style>
 </head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">todo_e_nc_web</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+<body style="background-color: #222;">
+    <div class="navbar1 workspaces">
+        <div class="workspace-item">
+            <span class="workspace-item-img"><img src="img/personal-workspace-icon.png" width="50" height="50" /></span>
+            <span class="workspace-item-name">Personal</span>
+        </div><hr />
+        <div class="workspace-item">
+            <span class="workspace-item-img"><img src="img/office-workspace-icon.png" width="50" height="50" /></span>
+            <span class="workspace-item-name">Work</span>
+        </div><hr />
+        <div class="workspace-item">
+            <span class="workspace-item-img"><img src="img/community-workspace-icon.png" width="50" height="50" /></span>
+            <span class="workspace-item-name">Community</span>
+        </div>
+
+    </div>
+
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
