Put together UI for folder and tasks pane

--- a/src/todo-e-nc-console/todo-e-nc-web/Views/Home/Index.cshtml
+++ b/src/todo-e-nc-console/todo-e-nc-web/Views/Home/Index.cshtml
@@ -2,11 +2,33 @@
     ViewData["Title"] = "e nc To Do List";
 }
 
-    <div class="text-center">
-        <h1 class="display-4">Welcome</h1>
-        <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-        <label id="async-reply"></label>
-        <button id="async-msg">Click me for IPC!</button>
+    <div>
+        <div class="task-item">
+            <span class="task-item-meta-duration">2h</span>
+            <span class="task-item-checkbox"><input type="checkbox" /></span>
+            <span class="task-item-summary">Fix the UI layout</span>
+        </div>
+
+        <div class="task-item">
+            <span class="task-item-meta-duration">2h</span>
+            <span class="task-item-checkbox"><input type="checkbox" /></span>
+            <span class="task-item-summary">Fix the UI layout</span>
+        </div>
+        <div class="task-item">
+            <span class="task-item-meta-duration">2h</span>
+            <span class="task-item-checkbox"><input type="checkbox" /></span>
+            <span class="task-item-summary">Fix the UI layout</span>
+        </div>
+        <div class="task-item">
+            <span class="task-item-meta-duration">2h</span>
+            <span class="task-item-checkbox"><input type="checkbox" /></span>
+            <span class="task-item-summary">Fix the UI layout</span>
+        </div>
+        <div class="task-item">
+            <span class="task-item-meta-duration">2h</span>
+            <span class="task-item-checkbox"><input type="checkbox" /></span>
+            <span class="task-item-summary">Fix the UI layout</span>
+        </div>
     </div>
 
 <script>
